--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,11 @@ boto3==1.16.32
 botocore==1.19.32
 certifi==2020.11.8
 chardet==3.0.4
+dj-database-url==0.5.0
 Django==3.1.3
 django-cleanup==5.1.0
 django-crispy-forms==1.10.0
+django-heroku==0.3.1
 django-storages==1.10.1
 gunicorn==20.0.4
 idna==2.10
@@ -19,6 +21,7 @@ mccabe==0.6.1
 numpy==1.19.4
 pandas==1.1.4
 Pillow==8.0.1
+psycopg2==2.8.6
 pylint==2.6.0
 python-dateutil==2.8.1
 pytz==2020.4
@@ -29,4 +32,5 @@ sqlparse==0.4.1
 toml==0.10.2
 typed-ast==1.4.1
 urllib3==1.26.2
+whitenoise==5.2.0
 wrapt==1.12.1
